secondfile/objects/Promotion_Engine_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BCC_Code__c</fullName>
        <label>BCC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCC_Promo_Code__c</fullName>
        <formula>IF(Discount_Percentage__c &lt; 0.10, BCC_Code__c &amp; Trim(Right(Text(Discount_Percentage__c),1)),
IF(
OR(Discount_Percentage__c = 0.10,
Discount_Percentage__c = 0.20,
Discount_Percentage__c = 0.40,
Discount_Percentage__c = 0.50,
Discount_Percentage__c = 0.60,
Discount_Percentage__c = 0.70,
Discount_Percentage__c = 0.80,
Discount_Percentage__c = 0.90),
BCC_Code__c &amp; Trim(Right(Text(Discount_Percentage__c)&amp; &quot;0&quot;,2)),
BCC_Code__c &amp; Trim(Right(Text(Discount_Percentage__c),2)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCC Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Deal_Reg_Percentage__c</fullName>
        <formula>Opportunity__r.Deal_Reg_Discount_Percentage__c</formula>
        <label>Custom Deal Reg Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Input_Field__c</fullName>
        <label>Input Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Promotion Engine Junction</relationshipLabel>
        <relationshipName>Promotion_Engine_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <label>Promotion Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Engine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Engine</label>
        <referenceTo>Promotion_Engine__c</referenceTo>
        <relationshipLabel>Promotion Engine Junction</relationshipLabel>
        <relationshipName>Promotion_Engine_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <description>Rebate Field</description>
        <formula>IF( Rank__c = 5 &amp;&amp; Opportunity__r.In_Region__c &gt;= 0.6,
IF(AND( Opportunity__r.Discounted_Price__c  &gt; 36999.99,Opportunity__r.Discounted_Price__c &lt; 74999.99), Opportunity__r.Discounted_Price__c * 0.05,
IF(AND(Opportunity__r.Discounted_Price__c &gt; 75000.00,Opportunity__r.Discounted_Price__c &lt; 179999.99), Opportunity__r.Discounted_Price__c * 0.10,
IF(Opportunity__r.Discounted_Price__c &gt; 180000.00, Opportunity__r.Discounted_Price__c * 0.15,null))),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_For_Product__c</fullName>
        <label>Valid For Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promotion Engine Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Promotion_Engine__c</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Rank__c</columns>
        <columns>Opportunity__c</columns>
        <columns>BCC_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEJ-{00000}</displayFormat>
        <label>Promotion Engine Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Engine Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>